try service layer imlementation, add base db migration and classes

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
             "email": "samizdam@inbox.ru"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+    	"psr-4": { "phamily\\framework\\" : "src/" }
+    }
 }
