--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,9 @@
     "minimum-stability": "dev",
     "autoload": {
     	"psr-4": { "phamily\\framework\\" : "src/" }
+    },
+    "autoload-dev": {
+    	"psr-4": { "phamily\\tests\\" : "tests/" }
     }
+    
 }
