--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "phamily/framework",
     "description": "Framework for developing genealogic's tree",
     "require": {
-        "zendframework/zend-db": "2.3"
+        "zendframework/zend-db": "2.6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "5"
