--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "minimum-stability": "dev",
     "autoload": {
     	"psr-4": { 
-    		"phamily\\framework\\" : "src/" 
+    		"Phamily\\Framework\\" : "src/" 
     	}
     },
     "autoload-dev": {
     	"psr-4": { 
-    		"phamily\\framework\\": "tests/", 
-    		"phamily\\tests\\" : "tests/" 
+    		"Phamily\\Framework\\": "tests/", 
+    		"Phamily\\tests\\" : "tests/" 
     	}
     }
     
