--- a/phinx.yml.dist
+++ b/phinx.yml.dist
@@ -23,7 +23,7 @@ environments:
         port: 3306
         charset: utf8
 
-    testing:
+    testing_mysql:
         adapter: mysql
         host: localhost
         name: phamily_test
@@ -31,3 +31,16 @@ environments:
         pass: ''
         port: 3306
         charset: utf8
+
+    testing_pgsql:
+        adapter: pgsql
+        host: localhost
+        name: phamily_test
+        user: postgres
+        pass: ''
+        port: 
+        charset: utf8
+
+    testing_sqlite:
+        adapter: sqlite
+        memory: true
