--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,10 @@
 	    <directory suffix=".php">src/</directory>
  	  </whitelist>
 	</filter>
+	<php>
+		<!-- set test connection used from phinx.yml -->
+		<env name="PHAMILY_TEST_ENV" value="testing_mysql" />
+	</php>
 	<!--
 	<logging>
   		<log type="coverage-html" target="_coverage" lowUpperBound="35" highLowerBound="70"/>
